--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
 envlist = py26,py27,py32,py33
 [testenv]
-deps=nose
+deps=
+    nose
+    coverage
 commands=
     python setup.py install
-    nosetests
+    nosetests --with-coverage --cover-erase --cover-package=amocrm
