--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,6 @@ envlist = py27,py32,py33
 deps=
     nose
     coverage
+    six
 commands=
-    python setup.py install
     nosetests --with-coverage --cover-erase --cover-package=amocrm
